# day03_2A202600060

./: main.py  pyproject.toml
report/group_report/: GROUP_C401_Z100.md
src/agent/: agent.py  test_agent.py
src/prompts/: ecom_ReAct.v1.txt  ecom_ReAct.v2.txt
src/tools/: inventory.py  logistics.py  promotion.py
