[project]
name = "day-3-lab-chatbot-vs-react-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "llama-cpp-python>=0.2.0",
    "openai>=2.30.0",
    "ddgs>=9.12.1",
]
